2017-01-23  Filip Pizlo  <fpizlo@apple.com>

        SharedArrayBuffer plus WebGL should not equal CRASH
        https://bugs.webkit.org/show_bug.cgi?id=167329

        Reviewed by Saam Barati.
        
        DOM unwrapping methods should return null rather than crashing. The code expects an
        unshared buffer, so we should return null when it's shared. The caller can then decide
        if they like null or not.

        * runtime/JSArrayBufferViewInlines.h:
        (JSC::JSArrayBufferView::toWrapped):

2017-01-23  Mark Lam  <mark.lam@apple.com>

        ObjCCallbackFunction::destroy() should not use jsCast().
        https://bugs.webkit.org/show_bug.cgi?id=167322

        Reviewed by Filip Pizlo.

        Since r210829, it is no longer correct for object destructors to use jsCast().
        Fixed ObjCCallbackFunction::destroy() to use a static_cast instead.

        * API/ObjCCallbackFunction.mm:
        (JSC::ObjCCallbackFunction::destroy):

2017-01-23  Michael Saboff  <msaboff@apple.com>

        IntlObject uses JSArray::tryCreateUninitialized in an unsafe way
        https://bugs.webkit.org/show_bug.cgi?id=167288

        Reviewed by Filip Pizlo.

        Refactored the following "create" methods into a "tryCreate" method and a
        "create" wrapper: JSArray::create(), Butterfly::create() and
        createArrayButterfly().

        Changed IntlObject.cpp to use JSArray::tryCreate() as it is simpler to use
        by not requiring the caller to be GC savey.  The performance benefits of
        tryCreateUninitialized() are not needed by the IntlObject c++ code.

        Did not add a new test as the bug caused LayoutTests/js/intl.html to fail
        reliably with the JSC option values scribbleFreeCells=true,
        collectContinuously=true and JSC_useGenerationalGC=false.

        * runtime/Butterfly.h:
        * runtime/ButterflyInlines.h:
        (JSC::Butterfly::tryCreate): Added.
        (JSC::Butterfly::create):